@@ -1,38 +1,0 @@
-package com.robertx22.mine_and_slash.database.stats.effects.defense;
-
-import com.robertx22.mine_and_slash.database.stats.Stat;
-import com.robertx22.mine_and_slash.database.stats.effects.base.BaseDamageEffect;
-import com.robertx22.mine_and_slash.saveclasses.unit.StatData;
-import com.robertx22.mine_and_slash.uncommon.effectdatas.DamageEffect;
-import com.robertx22.mine_and_slash.uncommon.effectdatas.EffectData.EffectTypes;
-import com.robertx22.mine_and_slash.uncommon.utilityclasses.RandomUtils;
-
-public class SpellDodgeEffect extends BaseDamageEffect {
-
-    @Override
-    public int GetPriority() {
-        return Priority.AlmostLast.priority;
-    }
-
-    @Override
-    public EffectSides Side() {
-        return EffectSides.Target;
-    }
-
-    @Override
-    public DamageEffect activate(DamageEffect effect, StatData data, Stat stat) {
-        if (RandomUtils.roll(data.getAverageValue())) {
-            effect.number = 0;
-            effect.isDodged = true;
-            effect.canceled = true;
-        }
-        return effect;
-    }
-
-    @Override
-    public boolean canActivate(DamageEffect effect, StatData data, Stat stat) {
-        return effect.getEffectType()
-            .equals(EffectTypes.SPELL);
-    }
-
-}
