@@ -21,7 +21,8 @@ public class EleSpellDmgEffect extends BaseDamageEffect {
 
     @Override
     public DamageEffect activate(DamageEffect effect, StatData data, Stat stat) {
-        effect.number *= data.getMultiplier();
+        effect.percentIncrease += data.getAverageValue();
+
         return effect;
     }
 
