@@ -20,12 +20,13 @@ public class ElementalFocusEffect extends BaseDamageEffect {
 
     @Override
     public DamageEffect activate(DamageEffect effect, StatData data, Stat stat) {
-        float amount = effect.number * data.getAverageValue() / 100;
 
         if (effect.element.equals(stat.getElement())) {
-            effect.number += amount;
+            effect.percentIncrease += data.getAverageValue();
+
         } else {
-            effect.number -= amount;
+            effect.percentIncrease -= data.getAverageValue();
+
         }
 
         return effect;
